# sisyphus

./: .env  .env.example  .gitignore  .gitmodules  BACKLOG.md  CLAUDE.md  Makefile  QUICKSTART.md  README.md  build-vibe-kanban.sh  deploy.sh  kind-config.yaml  start.sh  test.sh
orchestrator/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
orchestrator/config/: golden-cow.example.yaml
orchestrator/deploy/: .gitignore  README.md  deploy-secrets.sh  my-values.yaml  secrets.env.template
orchestrator/docs/: RUNBOOK.md  STATUS.md  V0.2-PLAN.md  deployment-pitfalls.md  sisyphus-integration.md
orchestrator/helm/: Chart.yaml  values.dev.yaml  values.yaml
orchestrator/migrations/: 0001_init.rollback.sql  0001_init.sql  0002_observability_views.rollback.sql  0002_observability_views.sql  0003_artifact_checks.rollback.sql  0003_artifact_checks.sql  0004_stage_runs.rollback.sql  0004_stage_runs.sql  0005_verifier_decisions.rollback.sql  0005_verifier_decisions.sql  0006_add_verifier_audit.rollback.sql  0006_add_verifier_audit.sql  0007_add_event_seen_processed_at.rollback.sql  0007_add_event_seen_processed_at.sql  0008_create_alerts.sql  0008_stage_runs_bkd_session_id.rollback.sql  0008_stage_runs_bkd_session_id.sql  0009_artifact_checks_flake.rollback.sql  0009_artifact_checks_flake.sql  0010_dispatch_slugs.rollback.sql  0010_dispatch_slugs.sql  0010_improver_runs.rollback.sql  0010_improver_runs.sql  0011_baseline_results.rollback.sql  0011_baseline_results.sql  0013_pr_drift_log.rollback.sql  0013_pr_drift_log.sql  0014_req_terminal_outcome.rollback.sql  0014_req_terminal_outcome.sql  0015_agent_turns.rollback.sql  0015_agent_turns.sql  0016_stage_runs_context.rollback.sql  0016_stage_runs_context.sql  0017_rename_analyze_to_execute.rollback.sql  0017_rename_analyze_to_execute.sql
orchestrator/scripts/: cleanup_orphan_openspec_changes.py
orchestrator/tests/: conftest.py  test_accept_env_gc.py  test_accept_env_gc_skeleton.py  test_actions_create_accept_multi_layer.py  test_actions_create_analyze_artifact_check.py  test_actions_create_execute_artifact_check.py  test_actions_create_pr_ci_watch.py  test_actions_escalate_openspec_cleanup.py  test_actions_post_acceptance_report.py  test_actions_runner_self_heal.py  test_actions_smoke.py  test_actions_start_analyze.py  test_actions_start_analyze_supersede.py  test_actions_start_challenger.py  test_actions_start_execute.py  test_actions_start_execute_supersede.py  test_admin.py  test_admin_pr_merged.py  test_admin_runner_gc.py  test_admission.py  test_agent_turns_collector.py  test_alerts.py  test_backfill_bkd_review_stuck.py  (+213 more)
thanatos/: .gitignore  Dockerfile  README.md  pyproject.toml
(+1142 files in other folders)
