[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thanatos"
version = "0.0.1"
description = "Sisyphus acceptance layer (MCP stdio server + scenario parser + driver protocol)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "phona" }]
dependencies = [
    "mcp>=1.2",
    "pydantic>=2.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
thanatos-server = "thanatos.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/thanatos"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring external infra",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
disallow_untyped_defs = false
